Bug 162245 - Insert -> Comment in Draw/Impress are not incrementally numbered anymore.
Summary: Insert -> Comment in Draw/Impress are not incrementally numbered anymore.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-07-29 12:32 UTC by Telesto
Modified: 2024-11-27 07:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-07-29 12:32:02 UTC
Description:
Insert -> Comment in Draw/Impress are incrementally numbered anymore. 

Steps to Reproduce:
1. Open Draw
2. Insert -> Comment (3x)

Actual Results:
All comments are numbered '1'

Expected Results:
Numbering incrementally increases: first comment labeled '1', second comment labeled '2'


Reproducible: Always


User Profile Reset: No

Additional Info:
Found in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46f7dcc5f499892ef093147b3f739c258bbf6b81
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

fine with
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2024-07-29 12:38:19 UTC
Save & Reload does actually number the existing comments properly. See also bug 162246
Comment 2 raal 2024-08-20 16:45:40 UTC
Confirm with Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1565181908a06dcdb8d97d6be8ff773acd1d05cb
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2024-08-20 16:58:16 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 809e3181036646fd9070c407949ce26675b2e961 is the first bad commit
commit 809e3181036646fd9070c407949ce26675b2e961
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue Jun 18 18:50:20 2024 +0200

    source e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229
168485: annot: new Annotation sdr object, replacing annotation tags | https://gerrit.libreoffice.org/c/core/+/168485

Also after insert comment Alt+CTRL+c comment's popup doesn't appear, only small square with number.
Comment 4 Commit Notification 2024-10-23 05:48:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7e405cfa797bba4f0c0b62e3d3739bb62071aba

tdf#162245 Insert->Comment in Draw/Impress not incrementally numbered

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Noel Grandin 2024-10-23 05:50:22 UTC
please split this part

> Also after insert comment Alt+CTRL+c comment's popup doesn't appear, only small square with number.

into another bug
Comment 6 Buovjaga 2024-10-23 08:03:34 UTC
(In reply to Noel Grandin from comment #5)
> please split this part
> 
> > Also after insert comment Alt+CTRL+c comment's popup doesn't appear, only small square with number.
> 
> into another bug

And best to check existing reports before: https://bugs.documentfoundation.org/buglist.cgi?chfield=%5BBug%20creation%5D&chfieldfrom=2024-06-01&chfieldto=Now&component=Draw&component=Impress&keywords=regression&keywords_type=allwords&resolution=---&short_desc=comment&short_desc_type=allwordssubstr
Comment 7 Buovjaga 2024-10-23 08:04:56 UTC
Also bug 161993 which nobody confirmed yet.
Comment 8 Telesto 2024-11-27 07:26:18 UTC
Should this bug not be closed as FIXED?

Patch is working perfectly

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5e0c670e6534fee529ea46d520c6b442bea93aac
CPU threads: 8; OS: macOS 14.5; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded