tdf#162245 Insert->Comment in Draw/Impress not incrementally numbered

fix numbering.

regression from
    commit e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229
    Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
    Date:   Thu Jun 6 10:52:35 2024 +0900
    annot: new Annotation sdr object, replacing annotation tags

Change-Id: I7f649346422886ab2e27a06b03b359ab395ec4e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175411
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins